change build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
 
 before_script:
   - git clone -q https://github.com/phalcon/cphalcon.git
-  - (cd cphalcon/build; ./travis-install && phpenv config-add ../../tests/phalcon.ini)
+  - (cd cphalcon/ext; export CFLAGS="-g3 -O1 -std=gnu90 -Wall -Werror -Wno-error=uninitialized"; phpize && ./configure --silent --enable-phalcon && make --silent -j4 > /dev/null && sudo make --silent install && phpenv config-add ../unit-tests/ci/phalcon.ini)
   - wget http://getcomposer.org/composer.phar
   - php composer.phar self-update
   - php composer.phar install
