--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,4 @@ before_script:
   - wget http://getcomposer.org/composer.phar
   - php composer.phar self-update
   - php composer.phar install
+  - php -i | grep phalcon
